--- a/Tagged Templates/index.html
+++ b/Tagged Templates/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tagged Templates</title>
+    <style>
+        .hl {
+            background-color: salmon;
+        }
+    </style>
 </head>
 <body>
     
 <script src="script.js"></script>
 </body>
 </html>
-<!-- 2 -->
+<!-- 3 -->
