--- a/For..of & for..in/index.html
+++ b/For..of & for..in/index.html
@@ -7,6 +7,12 @@
     <title>for..of & for..in</title>
 </head>
 <body>
+
+    <ul>
+        <li class="nama">Puteri</li>
+        <li class="nama">Husnul</li>
+        <li class="nama">Khotimah</li>
+    </ul>
     
 <script src="script.js"></script>
 </body>
