Latihan Spread Operator

--- a/Spread Operator/index.html
+++ b/Spread Operator/index.html
@@ -7,6 +7,12 @@
     <title>Spread Operator</title>
 </head>
 <body>
+    <ul>
+        <li>Putri</li>
+        <li>Hana</li>
+        <li>Erza</li>
+    </ul>
+    <!-- ingin mengambil nama pakai Js lalu disimpan ke Array -->
     
 <script src="script.js"></script>
 </body>
