--- a/Spread Operator/index.html
+++ b/Spread Operator/index.html
@@ -5,17 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spread Operator</title>
+    <style>
+        body {
+            background-color: Pink;
+            text-align: center;
+        /* tulisannya ada ditengah */
+        }
+
+        .nama {
+            font-family: arial;
+            font-size: 80px;
+            color: white;
+            transition: .3s;
+        }
+
+    /* animasi */
+        .nama:hover {
+          transform: scale(2);  
+        }
+    </style>
 </head>
 <body>
-    <ul>
+    <!-- <ul>
         <li>Putri</li>
         <li>Hana</li>
         <li>Erza</li>
-    </ul>
+    </ul> -->
     <!-- ingin mengambil nama pakai Js lalu disimpan ke Array -->
+
+
+    <h1 class="nama">Puteri</h1>
     
 <script src="script.js"></script>
 </body>
 </html>
 
-<!-- 2 -->
+<!-- 3 -->
