Latihan Spread Operator

--- a/Spread Operator/index.html
+++ b/Spread Operator/index.html
@@ -16,28 +16,35 @@
             font-family: arial;
             font-size: 80px;
             color: white;
-            transition: .3s;
         }
 
-    /* animasi */
-        .nama:hover {
-          transform: scale(2);  
+/* animation */
+        .nama span {
+            display: inline-block;
+            transition: .3s;
+            cursor: pointer;
         }
+
+
+        .nama span:hover {
+            transform: scale(2) translateY(-20px);
+        }
+
     </style>
 </head>
 <body>
     <!-- <ul>
-        <li>Putri</li>
+        <li>Putri</li>1
         <li>Hana</li>
         <li>Erza</li>
     </ul> -->
     <!-- ingin mengambil nama pakai Js lalu disimpan ke Array -->
 
 
-    <h1 class="nama">Puteri</h1>
+    <hi class="nama">Puteri</hi>
     
 <script src="script.js"></script>
 </body>
 </html>
 
-<!-- 3 -->
+<!-- 4 -->
